# jat

./: LICENSE  README.md  jat.cabal  stack-13.20.yaml  stack.yaml
examples/: Exp.jbc  Exp.jinja  Flatten.jbc  Flatten.jinja  GCD-A-mod.dot  GCD-GCD-gcd.dot  GCD-GCD-main.dot  GCD.jbc  GCD.jinja  ListAppend.jbc  ListAppend.jinja  TypeSwitch.jbc  TypeSwitch.jinja  WhileI.jbc  WhileI.jinja
src/: Main.hs
src/JFlow/: Acyclic.hs  Data.hs  Flow.hs  Instances.hs  PairSharing.hs  PairSharing2.hs  PointsTo.hs  Q.hs  ReachAC.hs  TreeShaped.hs  TreeShaped2.hs  TreeShapedRec.hs.bak  Typing.hs  Typing2.hs  TypingPass.hs  Utility.hs  WellTyping.hs
src/Jat/: CompGraph.hs  Constraints.hs  JatM.hs  PState.hs  PairSet.hs  PairSet.hs.bak  Program.hs
src/Jat/PState/: AbstrDomain.hs  AbstrValue.hs  BoolDomain.hs  Data.hs  Frame.hs  Fun.hs  Heap.hs  IntDomain.hs  MemoryModel.hs  Object.hs  Semantics.hs  Step.hs
src/Jat/PState/IntDomain/: Data.hs  SignedIntDomain.hs  SimpleIntDomain.hs
src/Jat/PState/MemoryModel/: Data.hs  PairSharing.hs  Primitive.hs  Sharing.hs  Sharing.hs.bak  UnSharing.hs
src/Jat/Program/: Data.hs  Fun.hs  Op.hs  Parser.hs
src/Jat/Utils/: Args.hs  Dot.hs  Fun.hs  Pretty.hs  Stack.hs  TRS.hs  Version.hs
src/Jinja/: Program.hs
src/Jinja/Program/: Data.hs  Fun.hs  Parser.hs
src/Jsat/: Data.hs  Flow.hs  Instances.hs  PairSharing2.hs  Q.hs  Reachability.hs  SemiLattice.hs  TreeShaped2.hs  Typing.hs  Typing2.hs  Utility.hs
