name:          jat
version:       1.1.0
stability:     experimental
author:        Michael Schaper <michael.schaper@uibk.ac.at>
maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
license:       LGPL
license-file:  COPYING.LESSER
synopsis:      An Analyzation tool for Jinja Bytecode 
description:
  This tool proviedes a complexity preserving transformation from Jinja
  Bytecode in constrained term rewrite systems (cTRS).
  
cabal-version:       >=1.8
build-type:          Simple

executable jat
  main-is:             
    Main.hs

  hs-source-dirs:
    src
  build-depends:
    ansi-wl-pprint == 0.6.*,
    array          == 0.5.*,
    base           == 4.*,
    containers     == 0.5.*,
    fgl            == 5.5.*,
    graphviz       >= 2999.16,
    mtl            == 2.1.*,
    parsec         == 3.1.*,
    safe           == 0.3.*,
    set-monad      == 0.2.*,
    text           == 1.2.*,

    term-rewriting == 0.*

  ghc-options:
    -j -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N

