name:          jat
version:       1.4.0
stability:     experimental
author:        Georg Moser, Michael Schaper
maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
license:       BSD3
license-file:  LICENSE
synopsis:      Jinja bytecode Analysation Tool
description:
  This tool proviedes a complexity preserving transformation from Jinja
  Bytecode in constrained term rewrite systems (cTRS).
build-type:    Simple
cabal-version: >=1.8

executable jat
  main-is:             
    Main.hs
  hs-source-dirs:
    src
  other-modules:
    JFlow.Data
    JFlow.Flow
    JFlow.Instances
    JFlow.PairSharing
    JFlow.PointsTo
    JFlow.ReachAC
    JFlow.Typing
    JFlow.Utility
    Jat.CompGraph
    Jat.Constraints
    Jat.JatM
    Jat.PState
    Jat.PState.AbstrDomain
    Jat.PState.AbstrValue
    Jat.PState.BoolDomain
    Jat.PState.Data
    Jat.PState.Frame
    Jat.PState.Fun
    Jat.PState.Heap
    Jat.PState.IntDomain
    Jat.PState.IntDomain.Data
    Jat.PState.IntDomain.SignedIntDomain
    Jat.PState.IntDomain.SimpleIntDomain
    Jat.PState.MemoryModel
    Jat.PState.MemoryModel.Data
    Jat.PState.MemoryModel.PairSharing
    Jat.PState.MemoryModel.Primitive
    Jat.PState.MemoryModel.UnSharing
    Jat.PState.Object
    Jat.PState.Semantics
    Jat.PState.Step
    Jat.PairSet
    Jat.Utils.Args
    Jat.Utils.Dot
    Jat.Utils.Fun
    Jat.Utils.Pretty
    Jat.Utils.TRS
    Jat.Utils.Version
    Jinja.Program
    Jinja.Program.Data
    Jinja.Program.Fun
    Jinja.Program.Parser
  build-depends:
    base >= 4.7 && <5,
    array,
    containers,
    mtl,
    set-monad,
    fgl,
    graphviz,
    text,
    ansi-wl-pprint,
    parsec,
    term-rewriting,
    jat

  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N

library
  hs-source-dirs:
    src
  exposed-modules:
    Jat.Constraints
    Jat.PState.Data
    Jat.PState.MemoryModel
    Jat.PState.AbstrDomain
    Jat.PState.IntDomain.Data
    Jat.PState.IntDomain.SimpleIntDomain
    Jat.PState.IntDomain.SignedIntDomain
    Jat.PState.Semantics
    Jat.PState.IntDomain
    Jat.PState.Heap
    Jat.PState.Step
    Jat.PState.Object
    Jat.PState.AbstrValue
    Jat.PState.BoolDomain
    Jat.PState.MemoryModel.Data
    Jat.PState.MemoryModel.UnSharing
    Jat.PState.MemoryModel.PairSharing
    Jat.PState.MemoryModel.Primitive
    Jat.PState.Frame
    Jat.PState.Fun
    Jat.Utils.Pretty
    Jat.Utils.Version
    Jat.Utils.Dot
    Jat.Utils.Args
    Jat.Utils.TRS
    Jat.Utils.Fun
    Jat.CompGraph
    Jat.JatM
    Jat.PairSet
    Jat.PState
    JFlow.Data
    -- JFlow.Acyclic
    JFlow.ReachAC
    JFlow.Instances
    JFlow.Utility
    JFlow.PairSharing
    -- JFlow.TreeShaped
    JFlow.Flow
    JFlow.PointsTo
    JFlow.Typing
    Jinja.Program
    Jinja.Program.Data
    Jinja.Program.Parser
    Jinja.Program.Fun
  build-depends:
    base >= 4.7 && <5,
    ansi-wl-pprint,
    array,
    containers,
    fgl,
    graphviz,
    mtl,
    parsec,
    safe,
    set-monad,
    text,
    term-rewriting

  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -funbox-strict-fields
